# feature-based-scaffolding

./: .env.example  README.md  apply.py  pyproject.toml
.devcontainer/: devcontainer.json
